--- a/gulimall-search/pom.xml
+++ b/gulimall-search/pom.xml
@@ -40,28 +40,28 @@
             <version>${elasticsearch.version}</version>
         </dependency>
 
-   <!--     &lt;!&ndash; redis &ndash;&gt;
+        <!-- redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>-->
+        </dependency>
 
-        <!--spring-session-redis-->
-      <!--  <dependency>
+ <!--       spring-session-redis-->
+        <dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!--thymeleaf模板引擎-->
- <!--       <dependency>
+     <!--   thymeleaf模板引擎-->
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>-->
+        </dependency>
 
         <!--		<dependency>-->
         <!--			<groupId>org.springframework.boot</groupId>-->
