整合检索页面

--- a/guliMall-product/src/main/resources/application.yml
+++ b/guliMall-product/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
   thymeleaf:
-    cache: true
+    cache: false
   redis:
     port: 6379
     host: localhost
@@ -24,7 +24,7 @@ spring:
     redis:
       time-to-live: 3600000
       #使用自定义key前缀
-      key-prefix: CACHE_
+     # key-prefix: CACHE_
       #是否启用前缀
       use-key-prefix: true
       #是否缓存空值
