--- a/guliMall-gateway/src/main/resources/application.yml
+++ b/guliMall-gateway/src/main/resources/application.yml
@@ -30,7 +30,11 @@ spring:
         - id: gulimall_host
           uri: lb://gulimall-product
           predicates:
-              - Host=**.guli-mall.com
+              - Host=guli-mall.com
+        - id: gulimall_search
+          uri: lb://gulimall-search
+          predicates:
+            - Host=search.guli-mall.com
 
         - id: admin_route
           uri: lb://renren-fast
