--- a/gulimall-search/pom.xml
+++ b/gulimall-search/pom.xml
@@ -63,12 +63,12 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
-        <!--		<dependency>-->
-        <!--			<groupId>org.springframework.boot</groupId>-->
-        <!--			<artifactId>spring-boot-devtools</artifactId>-->
-        <!--			&lt;!&ndash;optional设置为true，才是真的使用热部署&ndash;&gt;-->
-        <!--			<optional>true</optional>-->
-        <!--		</dependency>-->
+        		<dependency>
+        			<groupId>org.springframework.boot</groupId>
+        			<artifactId>spring-boot-devtools</artifactId>
+        			<!--optional设置为true，才是真的使用热部署-->
+        			<optional>true</optional>
+        		</dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
