--- a/gulimall-search/src/main/resources/application.yml
+++ b/gulimall-search/src/main/resources/application.yml
@@ -5,5 +5,7 @@ spring:
     nacos:
       discovery:
         server-addr: 101.200.200.220:8848
+  thymeleaf:
+    cache: false
 server:
   port: 12000
