--- a/guliMall-product/pom.xml
+++ b/guliMall-product/pom.xml
@@ -69,6 +69,12 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <!--optional设置为true，才是真的使用热部署-->
             <optional>true</optional>
