--- a/guliMall-product/src/main/resources/application.yml
+++ b/guliMall-product/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     cache: false
   redis:
     port: 6379
-    host: localhost
+    host: 101.200.200.220
    #springcache
   cache:
     type: redis
