--- a/gulimall-auth-server/src/main/resources/application.yml
+++ b/gulimall-auth-server/src/main/resources/application.yml
@@ -1,14 +1,15 @@
 spring:
   application:
-    name: gulimall-search
+    name: gulimall-auth-server
   cloud:
     nacos:
       discovery:
         server-addr: 101.200.200.220:8848
+  redis:
+    host: 101.200.200.220
+    port: 6379
   thymeleaf:
     cache: false
-  redis:
-    port: 6379
-    host: 101.200.200.220
 server:
-  port: 12000
+  port: 20000
+
