整合腾讯短信服务，阿里云太拉跨了，fuck

--- a/guliMall-third-party/pom.xml
+++ b/guliMall-third-party/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java</artifactId>
+            <!-- 注：这里只是示例版本号（可直接使用），可获取并替换为 最新的版本号，注意不要使用4.0.x版本（非最新版本） -->
+            <version>3.1.270</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
