--- a/gulimall-auth-server/pom.xml
+++ b/gulimall-auth-server/pom.xml
@@ -58,12 +58,12 @@
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
 
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-devtools</artifactId>-->
-        <!--            &lt;!&ndash;optional设置为true，才是真的使用热部署&ndash;&gt;-->
-        <!--            <optional>true</optional>-->
-        <!--        </dependency>-->
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-devtools</artifactId>
+                    <!--optional设置为true，才是真的使用热部署-->
+                    <optional>true</optional>
+                </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
