--- a/guliMall-product/src/main/resources/application.properties
+++ b/guliMall-product/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 gulimall.thread.core-pool-size=20
 gulimall.thread.max-pool-size=200
 gulimall.thread.keep-alive-time=10
+spring.session.store-type=redis
+server.servlet.session.timeout=30m
