购物车环境搭建

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>gulimall-warehouse</module>
         <module>gulimall-search</module>
         <module>guliMall-third-party</module>
+        <module>gulimall-auth-server</module>
+        <module>gulimall-cart</module>
     </modules>
 
 
