--- a/guliMall-gateway/src/main/resources/application.yml
+++ b/guliMall-gateway/src/main/resources/application.yml
@@ -30,7 +30,10 @@ spring:
           uri: lb://gulimall-auth-server
           predicates:
             - Host=auth.guli-mall.com
-
+        - id: gulimall_cart_route
+          uri: lb://gulimall-cart
+          predicates:
+              - Host=cart.guli-mall.com
         - id: gulimall_host
           uri: lb://gulimall-product
           predicates:
