--- a/gulimall-cart/src/main/resources/application.properties
+++ b/gulimall-cart/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.session.store-type=redis
+gulimall.thread.core-pool-size=20
+gulimall.thread.max-pool-size=200
+gulimall.thread.keep-alive-time=10
