--- a/guliMall-gateway/src/main/resources/application.yml
+++ b/guliMall-gateway/src/main/resources/application.yml
@@ -34,6 +34,10 @@ spring:
           uri: lb://gulimall-cart
           predicates:
               - Host=cart.guli-mall.com
+        - id: gulimall_order_route
+          uri: lb://gulimall-order
+          predicates:
+              - Host=order.guli-mall.com
         - id: gulimall_host
           uri: lb://gulimall-product
           predicates:
