--- a/gulimall-warehouse/src/main/resources/application.yml
+++ b/gulimall-warehouse/src/main/resources/application.yml
@@ -34,3 +34,7 @@ mybatis-plus:
 logging:
   level:
     com.wch.gulimall.warehouse: debug
+    #ribbon的超时时间
+ribbon:
+  ReadTimeout: 30000
+  ConnectTimeout: 30000
