--- a/gulimall-warehouse/src/main/resources/application.yml
+++ b/gulimall-warehouse/src/main/resources/application.yml
@@ -21,6 +21,10 @@ spring:
         server-addr: 101.200.200.220:8848
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
+  rabbitmq:
+    host: 192.168.84.88
+    port: 5672
+    virtual-host: /
 
 mybatis-plus:
   mapperLocations: classpath:mapper/**/*.xml
