--- a/guliMall-gateway/src/main/resources/application.yml
+++ b/guliMall-gateway/src/main/resources/application.yml
@@ -38,6 +38,10 @@ spring:
           uri: lb://gulimall-order
           predicates:
               - Host=order.guli-mall.com
+        - id: gulimall_member_route
+          uri: lb://gulimall-member
+          predicates:
+              - Host=member.guli-mall.com
         - id: gulimall_host
           uri: lb://gulimall-product
           predicates:
