--- a/guliMall-member/src/main/resources/application.yml
+++ b/guliMall-member/src/main/resources/application.yml
@@ -7,11 +7,18 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   application:
     name: gulimall-member
+  thymeleaf:
+    cache: false
+  session:
+    store-type: redis
   cloud:
     nacos:
       discovery:
         server-addr: 101.200.200.220:8848
        # server-addr: 192.168.84.88:8848
+  redis:
+    host: 192.168.84.88
+    port: 6379
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
