--- a/guliMall-gateway/src/main/resources/application.yml
+++ b/guliMall-gateway/src/main/resources/application.yml
@@ -26,6 +26,13 @@ spring:
               - Path=/api/ware/**
           filters:
               - RewritePath=/api/(?<segment>.*), /$\{segment}
+        - id: coupon_route
+          uri: lb://gulimall-coupon
+          predicates:
+              - Path=/api/coupon/**
+          filters:
+              - RewritePath=/api/(?<segment>.*), /$\{segment}
+
         - id: gulimall_auth_route
           uri: lb://gulimall-auth-server
           predicates:
