秒杀服务——秒杀活动信息以及秒杀商品信息

--- a/guliMall-gateway/src/main/resources/application.yml
+++ b/guliMall-gateway/src/main/resources/application.yml
@@ -57,7 +57,10 @@ spring:
           uri: lb://gulimall-search
           predicates:
             - Host=search.guli-mall.com
-
+        - id: gulimall_secondkill
+          uri: lb://gulimall-seckill
+          predicates:
+            - Host=seckill.guli-mall.com
         - id: admin_route
           uri: lb://renren-fast
 
