--- a/gulimall-secondkill/src/main/resources/application.yml
+++ b/gulimall-secondkill/src/main/resources/application.yml
@@ -34,6 +34,10 @@ spring:
       pool:
         core-size: 20
         max-size: 50
+  session:
+    store-type: redis
+
+
 server:
   port: 25000
 
