--- a/guliMall-member/pom.xml
+++ b/guliMall-member/pom.xml
@@ -20,6 +20,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <!--依赖公共模块-->
         <dependency>
             <groupId>com.wch</groupId>
