--- a/gulimall-cart/pom.xml
+++ b/gulimall-cart/pom.xml
@@ -20,6 +20,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.wch</groupId>
             <artifactId>guliMall-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
