--- a/guliMall-common/pom.xml
+++ b/guliMall-common/pom.xml
@@ -32,6 +32,9 @@
     </properties>
 
     <dependencies>
+        <dependency> <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
         <!--mybatisPlus-->
         <dependency>
             <groupId>com.baomidou</groupId>
