--- a/guliMall-gateway/src/main/resources/bootstrap.yml
+++ b/guliMall-gateway/src/main/resources/bootstrap.yml
@@ -2,8 +2,17 @@ spring:
   application:
     name: gulimall-gateway
   cloud:
-   nacos:
-    config:
+    sentinel:
+      transport:
+        dashboard: localhost:8333
+        port: 8719
+    nacos:
+     config:
      #server-addr: 192.168.84.88:8848
-     server-addr: 101.200.200.220:8848
-     namespace: a3888e43-dbfb-4301-86ce-c1997aa29eaf
+      server-addr: 101.200.200.220:8848
+      namespace: a3888e43-dbfb-4301-86ce-c1997aa29eaf
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
