--- a/guliMall-member/src/main/resources/application.yml
+++ b/guliMall-member/src/main/resources/application.yml
@@ -16,6 +16,11 @@ spring:
       discovery:
         server-addr: 101.200.200.220:8848
        # server-addr: 192.168.84.88:8848
+    sentinel:
+      transport:
+        dashboard: localhost:8333
+        port: 8719
+
   redis:
     host: 192.168.84.88
     port: 6379
@@ -31,3 +36,8 @@ server:
 ribbon:
   ReadTimeout: 30000
   ConnectTimeout: 30000
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
