--- a/guliMall-third-party/pom.xml
+++ b/guliMall-third-party/pom.xml
@@ -19,6 +19,10 @@
         <springcloud.alibaba.version>2.2.2.RELEASE</springcloud.alibaba.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <!--依赖公共模块-->
         <dependency>
             <groupId>com.wch</groupId>
