--- a/gulimall-cart/src/main/resources/application.yml
+++ b/gulimall-cart/src/main/resources/application.yml
@@ -7,6 +7,11 @@ spring:
     nacos:
       discovery:
         server-addr: 101.200.200.220:8848
+    sentinel:
+     transport:
+      dashboard: localhost:8333
+      port: 8719
+
   redis:
     host: 192.168.84.88
     port: 6379
@@ -14,3 +19,8 @@ spring:
 ribbon:
   ReadTimeout: 30000
   ConnectTimeout: 30000
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
