--- a/gulimall-search/src/main/resources/application.yml
+++ b/gulimall-search/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
     nacos:
       discovery:
         server-addr: 101.200.200.220:8848
+    sentinel:
+      transport:
+        dashboard: localhost:8333
+        port: 8719
+
   thymeleaf:
     cache: false
   redis:
@@ -12,3 +17,8 @@ spring:
     host: 192.168.84.88
 server:
   port: 12000
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
