--- a/gulimall-warehouse/src/main/resources/application.yml
+++ b/gulimall-warehouse/src/main/resources/application.yml
@@ -19,6 +19,11 @@ spring:
       discovery:
         #server-addr: 192.168.84.88:8848
         server-addr: 101.200.200.220:8848
+    sentinel:
+      transport:
+        dashboard: localhost:8333
+        port: 8719
+
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
   rabbitmq:
@@ -45,3 +50,8 @@ logging:
 ribbon:
   ReadTimeout: 30000
   ConnectTimeout: 30000
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
