--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>guliMall-third-party</module>
         <module>gulimall-auth-server</module>
         <module>gulimall-cart</module>
+        <module>gulimall-secondkill</module>
     </modules>
 
 
