--- a/guliMall-member/src/main/resources/application.yml
+++ b/guliMall-member/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  redis:
+    host: 192.168.84.88
+    port: 6379
   datasource:
     username: root
     password: 123456
@@ -20,10 +23,22 @@ spring:
       transport:
         dashboard: localhost:8333
         port: 8719
+  sleuth:
+    sampler:
+      probability: 1
+  zipkin:
+      base-url: http://192.168.84.88:9411/
+      discovery-client-enabled: false
+      sender:
+        type: web
 
-  redis:
-    host: 192.168.84.88
-    port: 6379
+logging:
+  level:
+    org.springframework.cloud.openfeign: debug
+    org.springframework.cloud.sleuth: debug
+
+
+
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
