--- a/guliMall-gateway/pom.xml
+++ b/guliMall-gateway/pom.xml
@@ -40,7 +40,10 @@
         <!--			<artifactId>spring-boot-starter-webflux</artifactId>-->
         <!--		</dependency>-->
 
-
+        <!--链路追踪-->
+        <dependency> <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.wch</groupId>
             <artifactId>guliMall-common</artifactId>
