--- a/guliMall-gateway/src/main/resources/bootstrap.yml
+++ b/guliMall-gateway/src/main/resources/bootstrap.yml
@@ -1,6 +1,14 @@
 spring:
   application:
     name: gulimall-gateway
+  sleuth:
+    sampler:
+      probability: 1
+  zipkin:
+      base-url: http://192.168.84.88:9411/
+      discovery-client-enabled: false
+      sender:
+        type: web
   cloud:
     sentinel:
       transport:
@@ -16,3 +24,7 @@ management:
     web:
       exposure:
         include: '*'
+logging:
+  level:
+    org.springframework.cloud.openfeign: debug
+    org.springframework.cloud.sleuth: debug
