--- a/guliMall-product/src/main/resources/application.yml
+++ b/guliMall-product/src/main/resources/application.yml
@@ -34,6 +34,14 @@ spring:
       use-key-prefix: true
       #是否缓存空值
       cache-null-values: true
+  sleuth:
+    sampler:
+      probability: 1
+  zipkin:
+    base-url: http://192.168.84.88:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
 
 
 
@@ -52,6 +60,8 @@ server:
 logging:
   level:
     com.wch.gulimall: info
+    org.springframework.cloud.openfeign: debug
+    org.springframework.cloud.sleuth: debug
 management:
   endpoints:
     web:
@@ -60,3 +70,4 @@ management:
 feign:
   sentinel:
     enabled: true
+
