--- a/gulimall-auth-server/src/main/resources/application.yml
+++ b/gulimall-auth-server/src/main/resources/application.yml
@@ -9,7 +9,14 @@ spring:
       transport:
         dashboard: localhost:8333
         port: 8719
-
+  sleuth:
+    sampler:
+      probability: 1
+  zipkin:
+      base-url: http://192.168.84.88:9411/
+      discovery-client-enabled: false
+      sender:
+        type: web
   redis:
     host: 192.168.84.88
     port: 6379
@@ -33,3 +40,7 @@ management:
     web:
       exposure:
         include: '*'
+logging:
+  level:
+    org.springframework.cloud.openfeign: debug
+    org.springframework.cloud.sleuth: debug
