--- a/gulimall-warehouse/pom.xml
+++ b/gulimall-warehouse/pom.xml
@@ -23,6 +23,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <!--链路追踪-->
+        <dependency> <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
         <!--依赖公共模块-->
         <dependency>
             <groupId>com.wch</groupId>
